src/App.css
.credit {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 2rem;
}

.warning {
    color: red;
    font-weight: bold;
    margin-top: 2rem;
}

.starter {
    width: 100vw;
    height: 100vh;
    color: black;
    background: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    font-weight: bold;
    flex-direction: column;
}

.starter-button {
    outline: 0;
    display: inline-flex;
    align-items: center;
    justify-content: space-between;
    background: #40B3A2;
    min-width: 200px;
    border: 0;
    border-radius: 4px;
    box-shadow: 0 4px 12px rgba(0, 0, 0, .1);
    box-sizing: border-box;
    padding: 16px 20px;
    color: #fff;
    font-size: 12px;
    font-weight: 600;
    letter-spacing: 1.2px;
    text-transform: uppercase;
    overflow: hidden;
    cursor: pointer;
}

.starter-button:hover {
    opacity: .95;
}
  
.starter-button .animation {
    border-radius: 100%;
    animation: ripple 0.6s linear infinite;
}


button {
    z-index: 1;
    border: 0;
    cursor: pointer;
    background-color: cadetblue;
    border: 1px solid cadetblue;
}

.primary-button {
    padding: 0.5rem;
    font-size: 1.5rem;
    background: transparent;
    color: #fff;
    border: 1px solid #fff;
}

@keyframes ripple {
    0% {
        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.1), 0 0 0 20px rgba(255, 255, 255, 0.1), 0 0 0 40px rgba(255, 255, 255, 0.1), 0 0 0 60px rgba(255, 255, 255, 0.1);
    }
    
    100% {
        box-shadow: 0 0 0 20px rgba(255, 255, 255, 0.1), 0 0 0 40px rgba(255, 255, 255, 0.1), 0 0 0 60px rgba(255, 255, 255, 0.1), 0 0 0 80px rgba(255, 255, 255, 0);
    }
}

.debug-button {
    position: absolute;
    bottom: 0;
    left: 0;
}

.debug-text {
    position: absolute;
    bottom: 0;
    right: 0;
}

.grayscale {
    filter: grayscale(100%);
}

nav {
    height: 40px;
    width: 100%;
    background: #000;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    border-bottom: 1px solid cadetblue;
}

.navbar-button {
    height: 40px;
    width: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    position: relative;
}

.music-button {
    position: absolute;
    top: 0;
    left: 0;
}

.credits-button {
    position: absolute;
    top: 0;
    right: 0;
}


nav img {
    /* aspect ratio square */
    height: 40px;
    width: 40px;
}

.neuro-look-left {
    transform: scaleX(-1);
}

.nav-mid {
    position: relative;
    height: 40px;
    background-color: cadetblue;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: 1rem;
    padding-right: 1rem;
}

nav img, .nav-mid {
    z-index: 2;
}

marquee {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 40px;
    z-index: 0;
    color: cadetblue;
    opacity: 0.3;
}

body {
    background: #3c5e4b;
    color: #fff;
    font-size: 1.5rem;
    overflow: hidden;
}

